# Codefind

./: .env.example  .gitignore  INSTALL.md  README.md  codefind  codefine  go.mod  go.sum  test_cleanup.go
codefind-server/: .env.example  .gitignore  README.md  app.py  audit.py  auth.py  models.py  pyproject.toml  ratelimit.py
codefind-server/routes/: index.py
codefind-server/scripts/: dev-server.sh
codefind-server/services/: chromadb_service.py  ollama_service.py
codefind-server/src/codefind_server/: __init__.py  app.py  config.py  devserver.py  logging.py  main.py  security.py  sparse_warmup.py
codefind-server/src/codefind_server/adapters/: base.py  qdrant.py
codefind-server/src/codefind_server/middleware/: __init__.py  auth.py  rate_limit.py  request_context.py
codefind-server/src/codefind_server/models/: __init__.py  requests.py  responses.py
codefind-server/src/codefind_server/routes/: __init__.py  admin.py  auth.py  collections.py  health.py  index.py  orgs.py  query.py  stats.py  tokenize.py
codefind-server/src/codefind_server/services/: __init__.py  clerk_admin.py  collection_scope.py  index_lock.py  indexing.py  ollama.py  (+4 more)
codefind-server/tests/: test_admin_routes.py  test_auth.py  test_auth_route.py  test_config.py  test_devserver.py  test_health.py  test_index_routes.py  test_indexing_service.py  test_logging.py  test_ollama_service.py  test_qdrant_adapter.py  test_query_ranking_eval.py  test_query_routes.py  test_rate_limit.py  test_request_context.py
codefind-server/tests_client/: test_collections_endpoint_unit.py  test_index_endpoint.py
(+92 files in other folders)
