[project]
name = "codefind-server"
version = "0.1.0"
description = "Code-Find v2 multi-tenant FastAPI server"
readme = "README.md"
authors = [
    { name = "trry", email = "54043933+tk-425@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
codefind-server = "codefind_server.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
