[project]
name = "codefind-server"
version = "0.1.0"
description = "Code-Find v2 multi-tenant FastAPI server"
readme = "README.md"
authors = [
    { name = "trry", email = "54043933+tk-425@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "PyJWT[crypto]",
    "pydantic",
    "qdrant-client",
    "sentry-sdk[fastapi]",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
codefind-server = "codefind_server.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
